--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
-name: kdapp17
-description: "A new Flutter project."
+name: NoCapAI
+description: "An app to generate captions for your pictures using AI."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0
+version: 1.0.1
 
 environment:
   sdk: ^3.5.4
@@ -13,7 +13,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   dynamic_color: ^1.7.0  # Make sure this is the correct/latest version
-
+  image_picker: ^1.0.4
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
